--- a/styles/District.css
+++ b/styles/District.css
@@ -14,6 +14,10 @@
   position: relative;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  /*height: 60px;*/
+  padding: 10px;
+  cursor: pointer;
 
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5) inset, 0 1px 1px #7A5938;
   border-radius: 4px 4px 0 0;
@@ -32,18 +36,24 @@
   /* Standard syntax */
 }
 
+.card-header:hover {
+  background: #f6bc83;
+}
+
 .info-back {
   /*position: absolute;
   left: 13px;
   top: -1px;*/
-  font-size: 30px;
+  font-family: 'Varela Round', sans-serif;
+
+  font-size: 20px;
   color: #3C4042;
 }
 
 .info-rank-wrapper {
-  /*position: absolute;*/
+  /*position: relative;
   right: 20px;
-  top: 3px;
+  top: 3px;*/
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,18 +61,18 @@
 
 .info-rank {
   /*font-family: 'Varela Round', sans-serif;*/
-  margin: 15px 0px 4px 0px;
+  /*margin: 15px 0px 4px 0px;*/
   font-size: 13px;
-  font-weight: 600;
+  /*font-weight: 600;*/
   color: #591C0E;
 }
 
 .info-rank-sub {
   /*font-family: 'Varela Round', sans-serif;*/
   font-size: 13px;
-  font-weight: 500;
-  font-size: 30px;
-  margin: 0;
+  /*font-weight: 500;*/
+  font-size: 20px;
+  /*margin: 0;*/
   color: #591C0E;
 }
 
@@ -70,7 +80,6 @@
   padding: 20px;
   /*font-family: 'Varela Round', sans-serif;*/
   /*font-size: 18px;*/
-  display: flex;
   flex-direction: column;
   color: #3C4042;
 }
