--- a/styles/District.css
+++ b/styles/District.css
@@ -2,12 +2,20 @@
 .card {
   margin: 15px;
   display: flex;
-  flex: 1;
   flex-direction: column;
+  min-width: 250px;
   border: 1px solid #C7AF97;
   border-radius: 4px;
   background-color: #FFF6E9;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.yes-flex {
+  flex: 1;
+}
+
+.no-flex {
+  flex: 0;
 }
 
 .card-header {
@@ -81,7 +89,7 @@
 
 .add-overflow{
   overflow: auto;
-  max-height: 150px;
+  max-height: 300px;
 }
 
 .card-bio {
