--- a/styles/ShowDown.css
+++ b/styles/ShowDown.css
@@ -1,12 +1,34 @@
 .compare-ratio {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  color: #591C0E;
+  background: lightseagreen;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+.no-flex {
+  flex: 0;
+}
+
+.center-me {
+  align-self: center;
+}
+
+.ratio-header {
+  font-size: 18px;
+  font-weight: 600;
+  font-family: 'Varela Round', sans-serif;
+}
+
+.ratio-detail {
+  font-size: 16px;
+  margin-left: 15px;
+  padding-top: 2px;
 }
 
 .card-header-showdown {
-  position: relative;
-  display: flex;
-  flex-direction: row;
   align-items: center;
   padding: 10px;
   cursor: default;
@@ -20,9 +42,6 @@
   background: linear-gradient(#FFF6E9, #FADCBE 70%);
 }
 
-.info-back-showdown {
-  align-self: center;
-}
 
 
 
@@ -42,7 +61,7 @@
   border: 1px solid #989180;
   border-right: 0;
   border-radius: 4px 0 0 4px;
-  padding: 2px 10px 2px 20px;
+  padding: 2px 20px 2px 20px;
 }
 
 .showdown-b {
@@ -51,7 +70,7 @@
   border: 1px solid #989180;
   border-left: 0;
   border-radius: 0 4px 4px 0;
-  padding: 2px 20px 2px 10px;
+  padding: 2px 20px 2px 20px;
 }
 
 .card-bio-year-red {
